--- a/trunk/timeTrackerUpd/bower.json
+++ b/trunk/timeTrackerUpd/bower.json
@@ -11,6 +11,8 @@
     "bootstrap": "~3.3.4",
     "angular-ui-router": "~0.2.14",
     "satellizer": "~0.10.1",
-    "fontawesome": "~4.3.0"
+    "fontawesome": "~4.3.0",
+    "angular-chart.js": "~0.7.0",
+    "Chart.js": "~1.0.2"
   }
 }
